<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.myaddressbook.Activities.ActHome">
    <item
        android:id="@+id/search"

        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:title="search_title"/>
    <item
        android:id="@+id/action_setting_group"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_setting_group" />
    <item
        android:id="@+id/action_setting_tag"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_setting_tag" />
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_reset" />
</menu>
