<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.myaddressbook.Activities.ActPeopleDetail">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"

        tools:context="com.myaddressbook.Activities.ActPeopleDetail">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:text="@string/title_detail_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txt_detail_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:gravity="center"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                android:visibility="gone"
                android:gravity="center" />

        </LinearLayout>

        <View
            android:id="@+id/line1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"

            android:background="#1E88E5" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center|left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/txt_detail_phone"
                android:layout_marginLeft="10dp"
                android:text="@string/title_detail_phone"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txt_detail_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:gravity="center"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"

                android:visibility="gone"
                android:layout_gravity="center"
                android:gravity="center" />

        </LinearLayout>

        <View
            android:id="@+id/line2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"

            android:layout_marginTop="0dp"
            android:background="#1E88E5" />

        <LinearLayout
            android:id="@+id/layout_detail_group1"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical|left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:text="@string/title_detail_group1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txt_detail_group1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:gravity="center"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/img_next_group1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_next_item"
                android:visibility="gone" />

        </LinearLayout>

        <View
            android:id="@+id/line3"
            android:layout_width="fill_parent"
            android:layout_height="1dp"

            android:background="#1E88E5" />

        <LinearLayout
            android:id="@+id/layout_detail_group2"
            android:layout_width="fill_parent"
            android:layout_height="50dp"

            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:text="@string/title_detail_group2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txt_detail_group2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/img_next_group2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_next_item"
                android:visibility="gone" />

        </LinearLayout>

        <View
            android:id="@+id/line4"
            android:layout_width="fill_parent"
            android:layout_height="1dp"

            android:background="#1E88E5" />

        <LinearLayout
            android:id="@+id/layout_detail_group3"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical|left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:text="@string/title_detail_group3"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txt_detail_group3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/img_next_group3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_next_item"
                android:visibility="gone" />

        </LinearLayout>

        <View
            android:id="@+id/line5"
            android:layout_width="fill_parent"
            android:layout_height="1dp"

            android:background="#1E88E5" />

        <LinearLayout
            android:id="@+id/layout_detail_tag1"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/title_detail_tag1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txt_detail_tag1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/title_detail_def"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/img_next_tag1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_next_item"
                android:visibility="gone" />

        </LinearLayout>

        <View
            android:id="@+id/line6"
            android:layout_width="fill_parent"
            android:layout_height="1dp"

            android:background="#1E88E5" />

        <LinearLayout
            android:id="@+id/layout_detail_tag2"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:text="@string/title_detail_tag2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txt_detail_tag2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/title_detail_def"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/img_next_tag2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_next_item"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_call"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/phone_click"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone_in_talk_black_36dp" />
    </LinearLayout>
</RelativeLayout>

